--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-REACT_APP_GITHUB_URL = "https://api.github.com"
-REACT_APP_GITHUB_TOKEN = "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"
+REACT_APP_GITHUB_URL = ""
+REACT_APP_GITHUB_TOKEN = ""
